# Kaggle-dashboard

./: .gitignore  Global_Climate_Change_Data_2020_2025 - Atalho.lnk  download_kaggle.py  from pathlib import Path.py  load_data.py  requirements.txt
data/raw/: Climate_Change_Real_Physics.csv
ml-portfolio-project/: README.md  pyproject.toml  requirements.txt
ml-portfolio-project/climate-change-ml-app/: README.md  requirements.txt
ml-portfolio-project/climate-change-ml-app/app/: main.py
ml-portfolio-project/climate-change-ml-app/app/pages/: 01_Exploratory_Analysis.py  02_Model_Prediction.py
ml-portfolio-project/climate-change-ml-app/data/raw/: Global_Climate_Change_Data_2020_2025.csv
ml-portfolio-project/climate-change-ml-app/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
ml-portfolio-project/climate-change-ml-app/src/: data_loader.py  models.py  preprocessing.py  utils.py
ml-portfolio-project/climate-change-ml-app/tests/: test_data_loader.py  test_models.py
ml-portfolio-project/notebooks/: 01-data-exploration.ipynb  02-modeling.ipynb
ml-portfolio-project/src/: streamlit_app.py
ml-portfolio-project/src/ml_pipeline/: data_loader.py  features.py  model.py  predict.py  preprocessing.py  train.py
ml-portfolio-project/src/utils/: metrics.py  visualization.py
ml-portfolio-project/tests/: test_data_loader.py  test_model.py
src/: app.py  constraints.txt  data_loader.py  gerar_dados_reais.py
